<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.varivoda.igor.tvz.financijskimanager.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.44" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#f2f4f5"
            android:scaleType="centerCrop"
            android:src="@drawable/login_image"
            android:contentDescription="@string/login_background_picture"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/credentialsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal">

            <TextView
                android:id="@+id/infoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/enter_your_credentials"
                android:textColor="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/enter_your_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.currentUsername}"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/enter_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.currentPassword}"
                    android:ems="10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="@={viewModel.rememberMe}"
                android:layout_marginStart="5dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/remember_me" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/orLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/credentialsLayout"
            android:weightSum="6"
            android:orientation="horizontal">

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/grey_color"
                 />


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or_resource"
                android:textSize="16sp"
                 />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="2dp"
                android:background="@color/grey_color"
                android:layout_gravity="center"
                 />
        </LinearLayout>

        <TextView
            android:id="@+id/fingerPrintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/place_your_finger_on_the_sensor_to_authenticate"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orLayout"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:drawableStartCompat="@drawable/ic_baseline_fingerprint_24" />



        <LinearLayout
            android:id="@+id/progressLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_in"
                app:layout_constraintTop_toBottomOf="@+id/pairingKeyLayout"
                tools:layout_editor_absoluteX="156dp" />

            <TextView
                android:id="@+id/progressInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_in_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        </LinearLayout>


        <Button
            android:id="@+id/loginButton"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> viewModel.evaluateCredentials()}"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>