<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.varivoda.igor.tvz.financijskimanager.ui.home.HomeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/shapeNormalUp"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:scaleType="fitStart"
            android:src="@drawable/shape_corner_up" />

        <ImageView
            android:id="@+id/shapeNormalDown"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/image_description"
            android:scaleType="fitEnd"
            android:src="@drawable/shape_corner_down" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/statistics"
                    style="@style/HomeCardView"
                    android:onClick="@{() -> viewModel.onStatisticsClick()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/slika1"
                        style="@style/HomeItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/statistic_value"
                        app:drawableTopCompat="@drawable/ic_statistic" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/insertInvoice"
                    style="@style/HomeCardView"
                    android:onClick="@{() -> viewModel.onInvoiceClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/slika2"
                        style="@style/HomeItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/insert_bill_value"
                        app:drawableTopCompat="@drawable/ic_add_invoice" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/customers"
                    style="@style/HomeCardView"
                    android:onClick="@{() -> viewModel.onCustomersClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/slika3"
                        style="@style/HomeItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/customers_value"
                        app:drawableTopCompat="@drawable/ic_customers" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/stores"
                    style="@style/HomeCardView"
                    android:onClick="@{() -> viewModel.onStoresClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/slika4"
                        style="@style/HomeItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/stores_value"
                        app:drawableTopCompat="@drawable/ic_stores" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/products"
                    style="@style/HomeCardView"
                    android:onClick="@{() -> viewModel.onProductsClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/slika5"
                        style="@style/HomeItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/products_value"
                        app:drawableTopCompat="@drawable/ic_products" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/employees"
                    style="@style/HomeCardView"
                    android:onClick="@{() -> viewModel.onEmployeeClicked()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/slika6"
                        style="@style/HomeItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/employees_value"
                        app:drawableTopCompat="@drawable/ic_employees" />

                </androidx.cardview.widget.CardView>
            </GridLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>