<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:id="@+id/more"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/bug"
                android:icon="@drawable/ic_virus"
                android:title="@string/report_a_bug"
                app:showAsAction="never" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                android:visible="false"
                android:title="@string/share" />
            <item
                android:id="@+id/enable_all"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/enable_all_options" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out"/>
        </menu>
    </item>
</menu>