<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f3ff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menu.MenuListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/menu_list_item"/>

</RelativeLayout>