...
        <item>Komparativna analiza</item>
        <item>Unesite sliku proizvoda</item>
        <!--item>Proizvod koji ima najmanji udio u ukupnoj prodaji po mjesecu</item-->
        <!--item>Županija u kojoj se određeni proizvod najbolje prodaje</item-->
    </string-array>
    <string-array name="employeesOptions">
        <item>Popis zaposlenika</item>
        <!--item>Zaposlenik koji je uprihodio najveću svotu novca po mjesecu</item-->
        <item>Top 3 zaposlenika sa najboljim koeficijentom količine na računu</item>
        <!--item>Grafički prikaz izdanih računa po zaposleniku</item-->
        <!--item>Zaposlenik koji je najveći broj dana zaredom izdao račun</item-->
        <!--item>Zaposlenici koji su ostvarili najveći prihod po mjesecu i županiji</item-->
        <item>Zaposlenik koji je prodao najveću količinu nekog proizvoda po mjesecu</item>
...
